--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@ body {
     min-height: 100vh;
     background-image: url(https://png.pngtree.com/background/20220726/original/pngtree-abstract-repeating-plus-pattern-silver-color-geometric-on-black-background-picture-image_1812772.jpg);
     margin: 0;
+
 }
 
-#container {
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +18,7 @@ body {
     margin-top: 30px;
 }
 
-#calcBody {
+.calcBody {
     display: flex;
     flex-direction: column;
     /* Change flex-wrap to flex-direction */
@@ -32,9 +33,7 @@ body {
     border: 5px grey solid;
 }
 
-/* Your existing CSS styles here */
-
-#calcDisplay {
+.calcDisplay {
     display: flex;
     flex: 0 0 auto;
     justify-content: center;
@@ -47,18 +46,21 @@ body {
     height: 115px;
     margin-top: 20px;
     font-size: 28px;
+    text-align: right;
+    word-wrap: break-word;
+    word-break: break-all;
+
 }
 
-#calcButtons2 {
+
+
+.buttons-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* Arrange buttons in 4 columns */
-    gap: 10px;
-    margin-top: 20px;
-    width: 400px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
 }
 
-#calcButtons {
+.calcButtonsMain {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     /* Arrange buttons in 4 columns */
@@ -67,8 +69,8 @@ body {
     width: 400px;
 }
 
-#calcButtons button,
-#calcButtons2 button {
+.calcButtonsMain button,
+.calcButtonsOther button {
     width: 100%;
     height: 85px;
     font-size: 20px;
@@ -76,6 +78,26 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }
+
+.calcButtonsOther {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* Arrange buttons in 2 columns */
+    gap: 10px;
+    margin-top: 20px;
+    width: 400px;
+}
+
+.calcButtonsOther button {
+    width: 100%;
+    height: 85px;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
 
 button {
     position: relative;
@@ -126,4 +148,42 @@ button:active:after {
     50% {
         opacity: 1;
     }
+}
+
+
+
+
+
+
+
+.span-2 {
+    grid-column: span 2;
+}
+
+.btn {
+    padding: 20px;
+    border: 2px var(--border) solid;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+
+/* Disables input spinners in calc screen */
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+#footer {
+
+    color: whitesmoke;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+
 }
